add ui for app